--- a/contacts.html
+++ b/contacts.html
@@ -451,6 +451,7 @@
 								<button class="button button--drenched w-sm-50">отправить</button>
 							</div>
 						</form>
+						<span class="modal-request-a-call__triangle"></span>
 					</div>	
 				</div>	
 			</div>
