--- a/index.html
+++ b/index.html
@@ -237,127 +237,134 @@
 					</div>
 				</header>
 
-				<main class="col p-0 content" id="content">
-					<!-- <div class="slider-vertical">
+				<main class="col p-0 content content--home" id="content">
+					<div class="slider-vertical">
 						<div id="slider-vertical">
 
 							<section class="content__slider">
 								<div class="slider-block">
 									<div class="slider-block__slide">
 										<div class="slider-block__bi" style="background-image: url(../img/slider-img1.png)"></div>
-										<span class="ring" style="width: 70px; height: 70px; bottom: 50px; left: -30px;"></span>
-										<span class="ring" style="width: 30px; height: 30px; bottom: 150px; right: 20px;"></span>
-										<span class="ring" style="width: 20px; height: 20px; bottom: 120px; right: 45px;"></span>
-										<h1 class="content__slider-title pl-5">
-											МОДУЛЬНЫЕ СВЕТИЛЬНИКИ<br>НОВОГО ПОКОЛЕНИЯ
-										</h1>
-										<div class="d-flex justify-content-between px-5">
-											<div class="content__slider__description">
+										<span class="ring ring-1 js-slider-parallax"></span>
+										<span class="ring ring-2 js-slider-parallax"></span>
+										<span class="ring ring-3 js-slider-parallax"></span>
+										<div class="position-relative h-100 w-100">
+											<h1 class="content__slider-title slider-title1 js-slider-parallax">
+												МОДУЛЬНЫЕ СВЕТИЛЬНИКИ<br>НОВОГО ПОКОЛЕНИЯ
+											</h1>
+											<div class="content__slider__description slider-description1 js-slider-parallax">
 												<h4 class="text-color-green pt-5 mt-4">Светодиодное освещение<br>Российское производство</h4>
-												<div class="text-right pt-4">
+												<div class="pt-2 pt-sm-4">
 													<a href="#" class="button button--drenched button__arrow-black">
 														узнать больше
 													</a>
 												</div>
 											</div>
-											<div class="col content__slider__image-slider1"></div>
-											<div class="text-right content__slider__description">
+											<div class="content__slider__image slider-image1 js-slider-parallax">
+												<img src="../img/slider-img1.png" alt="img">
+											</div>
+											<div class="text-right content__slider__description slider-description2 js-slider-parallax">
 												<h4>LED Драйверы<br>производства завода<br>Аргос-Электрон</h4>
 											</div>
 										</div>
 									</div>
+
 									<div class="slider-block__slide">
 										<div class="slider-block__bi" style="background-image: url(../img/slider-img2.png)"></div>
-										<span class="ring" style="width: 70px; height: 70px; top: 50px; right: -35px;"></span>
-										<span class="ring" style="width: 30px; height: 30px; top: 127px; right: 40px;"></span>
-										<h5 class="content__slider-title pt-0 pb-5 mb-3 text-center">
-											Разновидности светильников серии "Модуль"
-										</h5>
-										<div class="d-flex justify-content-between px-5">
-											<div class="content__slider__description">
+										<span class="ring ring-4 js-slider-parallax"></span>
+										<span class="ring ring-5 js-slider-parallax"></span>
+										<div class="position-relative h-100 w-100">
+											<h5 class="content__slider-title pt-0 mb-3 text-center slider-title2 js-slider-parallax">
+												Разновидности светильников серии "Модуль"
+											</h5>
+											<div class="content__slider__description slider-description3 js-slider-parallax">
 												<h4 class="pb-3">Уличный светильник КМО</h4>
 												<p class="content__slider__description-title-fz">
-													<span class="text-color-green">Lorem ipsum dolor sit amet,</span> consectetuer adipiscing<br> 
-													elit. Aenean commodo ligula eget dolor. Aenean massa. <br> 
-													Cum sociis natoque penatibus et magnis dis <br> 
-													parturient montes, nascetur ridiculus mus. Donec <br> 
-													quam felis, ultricies nec, pellentesque eu, pretium<br>  
-													quis, sem. Nulla consequat massa quis enim. <span class="text-color-green">Donec <br> 
-													pede justo, fringilla vel, aliquet nec, vulputate eget, <br> 
-													arcu. In enim justo, rhoncus ut,</span> imperdiet a, <br> 
-													venenatis vitae, justo. Nullam dictum felis eu <br> 
+													<span class="text-color-green">Lorem ipsum dolor sit amet,</span> consectetuer adipiscing
+													elit. Aenean commodo ligula eget dolor. Aenean massa.
+													Cum sociis natoque penatibus et magnis dis
+													parturient montes, nascetur ridiculus mus. Donec 
+													quam felis, ultricies nec, pellentesque eu, pretium  
+													quis, sem. Nulla consequat massa quis enim. <span class="text-color-green">Donec 
+													pede justo, fringilla vel, aliquet nec, vulputate eget,
+													arcu. In enim justo, rhoncus ut,</span> imperdiet a,
+													venenatis vitae, justo. Nullam dictum felis eu
 													pede mollis pretium. Integer tincidunt</p>
 											</div>
-											<div class="col content__slider__image-slider2"></div>
-											<div class="content__slider__description content__slider__description-bottom">
+											<div class="content__slider__image slider-image2 js-slider-parallax">
+												<img src="../img/slider-img2.png" alt="img">
+											</div>
+											<div class="content__slider__description slider-description4 js-slider-parallax">
 												<p class="content__slider__description-title-fz">
-													<span class="text-color-green">Lorem ipsum dolor sit amet, consectetuer adipiscing <br> 
-													elit. Aenean commodo ligula eget dolor.</span> Aenean massa. <br> 
-													Cum sociis natoque penatibus et magnis dis <br> 
-													parturient montes, nascetur ridiculus mus. Donec <br> 
-													quam felis, ultricies nec, pellentesque eu, pretium <br> 
-													quis, sem.<span class="text-color-green"> Nulla consequat massa quis enim.</span> Donec <br> 
-													pede justo, fringilla vel, aliquet nec, vulputate eget, <br> 
-													arcu. In enim justo, rhoncus ut, imperdiet a, <br> 
-													venenatis vitae, justo. Nullam dictum felis eu <br> 
-													pede mollis pretium. Integer tincidunt<br> 
+													<span class="text-color-green">Lorem ipsum dolor sit amet, consectetuer adipiscing
+													elit. Aenean commodo ligula eget dolor.</span> Aenean massa. 
+													Cum sociis natoque penatibus et magnis dis 
+													parturient montes, nascetur ridiculus mus. Donec 
+													quam felis, ultricies nec, pellentesque eu, pretium 
+													quis, sem.<span class="text-color-green"> Nulla consequat massa quis enim.</span> Donec 
+													pede justo, fringilla vel, aliquet nec, vulputate eget, 
+													arcu. In enim justo, rhoncus ut, imperdiet a, 
+													venenatis vitae, justo. Nullam dictum felis eu  
+													pede mollis pretium. Integer tincidunt 
 												</p>
 											</div>
 										</div>
 									</div>
+
 									<div class="slider-block__slide">
-										-
-									</div>
+										3
+									</div>		
 								</div>
 							</section>
 						
 							<section class="content__slider">
 								<div class="slider-block">
+
 									<div class="slider-block__slide">
 										<div class="slider-block__bi" style="background-image: url(../img/slider-img2.png)"></div>
-										<span class="ring" style="width: 70px; height: 70px; top: 50px; right: -35px;"></span>
-										<span class="ring" style="width: 30px; height: 30px; top: 127px; right: 40px;"></span>
-										<h5 class="content__slider-title pt-0 pb-5 mb-3 text-center">
-											Разновидности светильников серии "Модуль"
-										</h5>
-										<div class="d-flex justify-content-between px-5">
-											<div class="content__slider__description">
+										<span class="ring ring-4 js-slider-parallax"></span>
+										<span class="ring ring-5 js-slider-parallax"></span>
+										<div class="position-relative h-100 w-100">
+											<h5 class="content__slider-title pt-0 mb-3 text-center slider-title2 js-slider-parallax">
+												Разновидности светильников серии "Модуль"
+											</h5>
+											<div class="content__slider__description slider-description3 js-slider-parallax">
 												<h4 class="pb-3">Уличный светильник КМО</h4>
 												<p class="content__slider__description-title-fz">
-													<span class="text-color-green">Lorem ipsum dolor sit amet,</span> consectetuer adipiscing<br> 
-													elit. Aenean commodo ligula eget dolor. Aenean massa. <br> 
-													Cum sociis natoque penatibus et magnis dis <br> 
-													parturient montes, nascetur ridiculus mus. Donec <br> 
-													quam felis, ultricies nec, pellentesque eu, pretium<br>  
-													quis, sem. Nulla consequat massa quis enim. <span class="text-color-green">Donec <br> 
-													pede justo, fringilla vel, aliquet nec, vulputate eget, <br> 
-													arcu. In enim justo, rhoncus ut,</span> imperdiet a, <br> 
-													venenatis vitae, justo. Nullam dictum felis eu <br> 
+													<span class="text-color-green">Lorem ipsum dolor sit amet,</span> consectetuer adipiscing
+													elit. Aenean commodo ligula eget dolor. Aenean massa.
+													Cum sociis natoque penatibus et magnis dis
+													parturient montes, nascetur ridiculus mus. Donec 
+													quam felis, ultricies nec, pellentesque eu, pretium  
+													quis, sem. Nulla consequat massa quis enim. <span class="text-color-green">Donec 
+													pede justo, fringilla vel, aliquet nec, vulputate eget,
+													arcu. In enim justo, rhoncus ut,</span> imperdiet a,
+													venenatis vitae, justo. Nullam dictum felis eu
 													pede mollis pretium. Integer tincidunt</p>
 											</div>
-											<div class="col content__slider__image-slider2"></div>
-											<div class="content__slider__description content__slider__description-bottom">
+											<div class="content__slider__image slider-image2 js-slider-parallax">
+												<img src="../img/slider-img2.png" alt="img">
+											</div>
+											<div class="content__slider__description slider-description4 js-slider-parallax">
 												<p class="content__slider__description-title-fz">
-													<span class="text-color-green">Lorem ipsum dolor sit amet, consectetuer adipiscing <br> 
-													elit. Aenean commodo ligula eget dolor.</span> Aenean massa. <br> 
-													Cum sociis natoque penatibus et magnis dis <br> 
-													parturient montes, nascetur ridiculus mus. Donec <br> 
-													quam felis, ultricies nec, pellentesque eu, pretium <br> 
-													quis, sem.<span class="text-color-green"> Nulla consequat massa quis enim.</span> Donec <br> 
-													pede justo, fringilla vel, aliquet nec, vulputate eget, <br> 
-													arcu. In enim justo, rhoncus ut, imperdiet a, <br> 
-													venenatis vitae, justo. Nullam dictum felis eu <br> 
-													pede mollis pretium. Integer tincidunt<br> 
+													<span class="text-color-green">Lorem ipsum dolor sit amet, consectetuer adipiscing
+													elit. Aenean commodo ligula eget dolor.</span> Aenean massa. 
+													Cum sociis natoque penatibus et magnis dis 
+													parturient montes, nascetur ridiculus mus. Donec 
+													quam felis, ultricies nec, pellentesque eu, pretium 
+													quis, sem.<span class="text-color-green"> Nulla consequat massa quis enim.</span> Donec 
+													pede justo, fringilla vel, aliquet nec, vulputate eget, 
+													arcu. In enim justo, rhoncus ut, imperdiet a, 
+													venenatis vitae, justo. Nullam dictum felis eu  
+													pede mollis pretium. Integer tincidunt 
 												</p>
 											</div>
 										</div>
 									</div>
+
 									<div class="slider-block__slide">
-										-
-									</div>
-									<div class="slider-block__slide">
-										-
-									</div>
+										2
+									</div>		
 								</div>
 							</section>
 
@@ -365,23 +372,32 @@
 					</div>	
 					<div class="content__bottom-block p-2 row m-0 align-items-center">
 						<div class="col-6">
-							<a href="#">Стать партнером</a>
+							<span class="content__bottom-block-link" id="button-dropdown-partner">Стать партнером</span>
 						</div> 
-						<div class="col-6 slider-vertical__control d-flex align-items-center justify-content-end pr-5">
+						<div class="col-6 slider-vertical__control d-flex align-items-center justify-content-end pr-sm-5">
 							<div class="px-3">
 								<span id="slider-vertical-current">1</span> из <span id="slider-vertical-quantity"></span>
 							</div>
-							<div class="d-flex flex-column pr-5">
-								<div id="slider-vertical-top-arrow" class="slider-vertical__arrow"></div>
-								<div id="slider-vertical-bottom-arrow" class="slider-vertical__arrow arrow-to-down"></div>
+							<div class="d-flex flex-column pr-sm-5">
+								<div id="slider-vertical-top-arrow" class="slider-vertical__arrow">
+									<svg xmlns="http://www.w3.org/2000/svg" width="44.788" height="17.973" viewBox="0 0 44.788 17.973">
+										<path id="Path_3" data-name="Path 3" d="M0,39.236,13.2,19.569,0,0" transform="translate(2.776 15.196) rotate(-90)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
+									</svg>
+								</div>
+								<div id="slider-vertical-bottom-arrow" class="slider-vertical__arrow arrow-to-down">
+									<svg xmlns="http://www.w3.org/2000/svg" width="44.788" height="17.973" viewBox="0 0 44.788 17.973">
+										<path id="Path_3" data-name="Path 3" d="M0,39.236,13.2,19.569,0,0" transform="translate(2.776 15.196) rotate(-90)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
+									</svg>
+								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
 				</main>	
 
-				<div class="modal-request-a-call d-none" id="block-dropdown-phone">
-					<div class="modal-request-a-call__content">
-						<div class="modal-request-a-call__close d-flex justify-content-center align-items-center">
+				<div class="d-none" id="block-dropdown-phone">
+					<span class="modal-windows__bg"></span>
+					<div class="modal-windows modal-windows--phone">
+						<div class="modal-windows__close d-flex justify-content-center align-items-center" id="block-dropdown-phone__close">
 							<img src="img/svg/cross.svg" alt="cross-icon">
 						</div>
 						<form>
@@ -397,9 +413,47 @@
 								<button class="button button--drenched w-sm-50">отправить</button>
 							</div>
 						</form>
+						<span class="modal-windows__triangle modal-windows__triangle--phone"></span>
 					</div>	
-				</div>	
-
+				</div>
+				<div class="d-none" id="block-dropdown-partner">
+					<span class="modal-windows__bg"></span>
+					<div class="modal-windows modal-windows--partner">
+						<div class="modal-windows__close d-flex justify-content-center align-items-center" id="block-dropdown-partner__close">
+							<img src="img/svg/cross.svg" alt="cross-icon">
+						</div>
+						<form>
+							<div class="form-group style-form">
+								<label for="name" class="style-form__label">ФИО</label>
+								<input id="name" type="name" class="form-control style-form__input" name="name" placeholder="ФИО">
+							</div>
+							<div class="form-group style-form">
+								<label for="email" class="style-form__label">E-mail</label>
+								<input id="email" type="email" class="form-control style-form__input" name="email" placeholder="E-mail">
+							</div>
+							<div class="form-group style-form">
+								<label for="kont-phone" class="style-form__label">Телефон</label>
+								<input id="kont-phone" type="phone" class="form-control style-form__input" name="kont-phone"  placeholder="+7 …">
+							</div>
+							<div class="form-group style-form">
+								<label for="organ" class="style-form__label">Организация</label>
+								<input id="organ" type="text" class="form-control style-form__input" name="organ" placeholder="Организация">
+							</div>
+							<div class="form-group style-form">
+								<label for="region" class="style-form__label">Регион</label>
+								<input id="region" type="text" class="form-control style-form__input" name="region" placeholder="Регион">
+							</div>
+							<div class="form-group style-form">
+								<label for="city" class="style-form__label">Город</label>
+								<input id="city" type="text" class="form-control style-form__input" name="city" placeholder="Город">
+							</div>
+							<div class="text-center">
+								<button class="button button--drenched w-sm-50">Запросить партнерство</button>
+							</div>
+						</form>
+						<span class="modal-windows__triangle modal-windows__triangle--partner"></span>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
