--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
 							<div class="sidebar__link-name">Магистральное освещение</div>
 						</a>
 					</li>
-					<li class='sidebar__item'>
+					<li class='sidebar__item active'>
 						<a href="#" class='sidebar__link'>
 							<div class="sidebar__link-number">03</div>
 							<div class="sidebar__link-name">Промышленное освещение</div>
@@ -481,8 +481,10 @@
 								<button class="button button--drenched w-sm-50">отправить</button>
 							</div>
 						</form>
+						<span class="modal-request-a-call__triangle"></span>
 					</div>	
-				</div>
+				</div>	
+
 			</div>
 		</div>
 	</div>
